# avm

./: AvmExceptions.cpp  AvmExceptions.hpp  CMakeLists.txt  IOperand.hpp  Lexer.cpp  Lexer.hpp  Makefile  Operand.cpp  Operand.hpp  OperandsFactory.cpp  OperandsFactory.hpp  Parser.cpp  Parser.hpp  Stack.class.cpp  Stack.class.hpp  Stack.cpp  Stack.hpp  a.out  autocomplete.c  avExceptions.cpp  avExceptions.hpp  leaks  main.cpp  test  test2.avm  test3.avm
test_cases/: avm
tests/: avm
